--- a/Regular/300 C/Group 10/group_list.html
+++ b/Regular/300 C/Group 10/group_list.html
@@ -21,10 +21,10 @@
         </thead>
         <tbody>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>5201040294</td>
+                <td>Bismark Yeboah</td>
+                <td>bismarkyeboah22@gmail.com</td>
+                <td>0241844910</td>
             </tr>
         </tbody>
     </table>
